--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,13 @@
     <div class="header-container">
         <nav class="navbar navbar-expand">
             <div class="row header-logo">
-                <div class="col-md-3 ux-logo">
+                <!-- <div class="col-md-3 ux-logo">
                     <img src="./assets/images/logo6.svg" routerLink="/" alt="Logo">
                 </div>
                 <div class="col-md-7">
                 <h2 routerLink="/">CONSULTING<br>SERVICES</h2>
-                </div>
+                </div> -->
+                <img src="./assets/images/UDnew.svg" routerLink="/" alt="Logo">
             </div>
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
@@ -52,9 +53,6 @@
                     <a routerLink="/engagement-models">Engagement Models</a>
                 </li>
             </ul>
-            <!--<div class="button">
-                <div class="btn btn-white">Let's Talk <img src="./assets/images/rightarrow.svg" alt="letTalk"></div>
-            </div>-->
         </div>
         <div class="col-md-3">
             <h2>Who We Are</h2>
