--- a/src/app/components/alert/alert.component.scss
+++ b/src/app/components/alert/alert.component.scss
@@ -19,7 +19,7 @@
     p{
         font-size: 20px;
         color: #3b3b3b;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
         text-align: center;
         font-weight: 400;
       a{
@@ -40,7 +40,7 @@
     color: #0D0D0D;
     font-size: 18px;
     padding: 6px 30px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     &:hover{
         background-color: #C3343C;
         color: #FFFFFF;
