--- a/src/app/components/blogs/blogs.component.scss
+++ b/src/app/components/blogs/blogs.component.scss
@@ -14,7 +14,7 @@
         
         .blog-heading{
             margin-left: 200px;
-            font-family: 'muli', sans-serif;
+            font-family: "Muli", sans-serif;
             font-weight: 200;
             font-size: 55px;
             color: #000000;
@@ -27,7 +27,7 @@
             font-size: 26px;
             color: #707071;
             padding-top: 25px;
-            font-family: 'muli', sans-serif;
+            font-family: "Muli", sans-serif;
             margin-left: 200px;
             a{
                 color: #000000;
@@ -73,7 +73,7 @@
                             font-size: 20px;
                             padding-top: 25px;
                             color: #3B3B3B;
-                            font-family: 'muli', sans-serif;
+                            font-family: "Muli", sans-serif;
                           }
                           
                           a:after {
@@ -98,7 +98,7 @@
                           }
                         h6{
                             color: #707071;
-                            font-family: 'muli', sans-serif;
+                            font-family: "Muli", sans-serif;
                             font-size: 16px;
                         }
                         img{
@@ -138,7 +138,7 @@
         padding-bottom: 40px;
         h2{
             font-size: 57px;
-            font-family: 'muli', sans-serif;
+            font-family: "Muli", sans-serif;
             color: #FFFFFF;
         }
         .button{
@@ -151,7 +151,7 @@
             cursor: pointer;
             padding: 10px 20px;
             border-radius: 0px;
-            font-family: 'muli', sans-serif;
+            font-family: "Muli", sans-serif;
             &:hover{
                 background-color: #FFFFFF;
                 color: #000000;
