--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -41,13 +41,13 @@
                         <h2>Digital Transformation for Telcom </h2>
                         <p>UX . UI . Mobile . B2B</p>
                         <div class="anime-button">
-                           <a   routerLink="/work/networking">Case Study</a>
+                           <a routerLink="/work/networking">Case Study</a>
                         </div>                     
                      </div>
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="right-image">
-                        <img src="./assets/images/works/network1.webp" alt="Digital Transformation for Telcom">
+                        <img src="./assets/images/works/work01.png" alt="Digital Transformation for Telcom">
                      </div>
                   </div>
                </div>
@@ -58,13 +58,14 @@
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
-                        <img src="./assets/images/works/works2.png" alt="Event Hosting made stressless"> 
+                        <img src="./assets/images/works/work02.png" alt="Event Hosting made stressless">
                      </div>
                   </div>
                   <div class="col-md-6 ordertwo">
+                     <div class="container">
                         <div class="right-content">
-                           <h2></h2>
-                           <p></p>
+                           <h2>Event Hosting made stressless</h2>
+                           <p>UX . UI . Web . Mobile . B2C</p>
                            <div class="anime-button">
                               <a routerLink="/work/event-management">Case Study</a>
                            </div>  
@@ -72,14 +73,35 @@
                      </div>
                   </div>
                </div>
+            </div>
          </div>
 
-
+         <div class="work-left">
+            <div class="container">
+               <div class="row">
+                  <div class="col-md-6 ordertwo">
+                     <div class="left-content">
+                        <h2>To adapt organic food as a Lifestyle</h2>
+                        <p>UX . UI . web . Mobile .B2C</p>
+                        <div class="anime-button">
+                           <a routerLink="/work/health-care">Case Study</a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-md-6 orderone">
+                     <div class="right-image">
+                        <img src="./assets/images/works/work03.png" alt="To adapt organic food as a Lifestyle">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
          <div class="work-right">
+            <div class="container">
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
-                        <img src="./assets/images/works/works4.png" alt="Website for Startup">
+                        <img src="./assets/images/works/work04.png" alt="Website for Startup">
                      </div>
                   </div>
                   <div class="col-md-6 ordertwo">
@@ -94,14 +116,16 @@
                      </div>
                   </div>
                </div>
+            </div>
          </div>
 
          <div class="work-left">
+            <div class="container">
                <div class="row">
                   <div class="col-md-6 ordertwo">
                      <div class="left-content">
-                        <h2></h2>
-                        <p></p>
+                        <h2>A designers platform for creative upskill</h2>
+                        <p>UX . UI . Mobile . Web . B2C</p>
                         <div class="anime-button">
                            <a routerLink="/work/skill-development">Case Study</a>
                         </div>
@@ -109,16 +133,18 @@
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="right-image">
-                        <img src="./assets/images/works/works5.webp" alt="A designers platform for creative upskill">
+                        <img src="./assets/images/works/work05.png" alt="A designers platform for creative upskill">
                      </div>
                   </div>
                </div>
+            </div>
          </div>
          <div class="work-right">
+            <div class="container">
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
-                        <img src="./assets/images/works/works6.png" alt="Child Care Portal">
+                        <img src="./assets/images/works/work06.png" alt="Child Care Portal">
                      </div>
                   </div>
                   <div class="col-md-6 ordertwo">
@@ -127,15 +153,17 @@
                            <h2>Child Care Portal</h2>
                            <p>UX . UI . Mobile . Web . B2C</p>
                            <div class="anime-button">
-                              <a   routerLink="/work/childcare-portal">Case Study</a>
+                              <a routerLink="/work/childcare-portal">Case Study</a>
                            </div>
                         </div>
                      </div>
                   </div>
                </div>
+            </div>
          </div>
 
          <div class="work-left">
+            <div class="container">
                <div class="row">
                   <div class="col-md-6 ordertwo">
                      <div class="left-content">
@@ -148,16 +176,18 @@
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="right-image">
-                        <img src="./assets/images/works/market1.webp" alt="A Customer Advocacy Platform">
+                        <img src="./assets/images/works/work07.png" alt="A Customer Advocacy Platform">
                      </div>
                   </div>
                </div>
+            </div>
          </div>
          <div class="work-right">
+            <div class="container">
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
-                        <img src="./assets/images/works/works8.png" alt="Automobile Usability Testing">
+                        <img src="./assets/images/works/work08.png" alt="Automobile Usability Testing">
                      </div>
                   </div>
                   <div class="col-md-6 ordertwo">
@@ -172,9 +202,11 @@
                      </div>
                   </div>
                </div>
+            </div>
          </div>
 
          <div class="work-left">
+            <div class="container">
                <div class="row">
                   <div class="col-md-6 ordertwo">
                      <div class="left-content">
@@ -187,10 +219,11 @@
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="right-image">
-                        <img src="./assets/images/works/works9.png" alt="Repository of Accomplishments">
+                        <img src="./assets/images/works/work09.png" alt="Repository of Accomplishments">
                      </div>
                   </div>
                </div>
+            </div>
          </div>
       </div>
    </div>
