--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -7,10 +7,10 @@
 }
 .banner{
     background-color: #f7f5f0;
-    padding: 140px 0px;
+    padding: 250px 0px;
      h1{
          font-size: 38px;
-         font-family: Baskerville;
+         font-family: "Muli", sans-serif;
          color: #3B3B3B;
          span{
             font-size: 76px;
@@ -24,12 +24,12 @@
        }
        h2{
         font-size: 82px;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
         color: #000000;
     }
     h5{
         font-size: 24px;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
         color: #3B3B3B;
         line-height: 36px;
         padding-top: 35px;
@@ -123,13 +123,13 @@
             h2{
                 color: #3B3B3B;
                 font-size: 56px;
-                font-family: Baskerville;
+                font-family: "Muli", sans-serif;
                 font-weight: 100;
             }
             p{
                 color: #030303;
                 font-size: 18px;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
                 font-weight: 100;
             }
             .outline-btn{
@@ -138,7 +138,7 @@
                 padding: 10px 20px;
                 margin: 40px 0px;
                 font-size: 18px;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
                 &:hover{
                     background-color: #C3343C;
                     color: #FFFFFF;
@@ -161,13 +161,13 @@
             h2{
                 color: #000000;
                 font-size: 56px;
-                font-family: Baskerville;
+                font-family: "Muli", sans-serif;
                 font-weight: 100;
             }
             p{
                 color: #000000;
                 font-size: 18px;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
                 font-weight: 100;
             }
             .outline-btn{
@@ -176,7 +176,7 @@
                 padding: 10px 20px;
                 margin: 40px 0px;
                 font-size: 18px;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
                 &:hover{
                     background-color: #C3343C;
                     color: #FFFFFF;
