--- a/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
+++ b/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-    <div class="service-layout1">
+    <!-- <div class="service-layout1">
         <div class="row">
             <div class="col-md-6 left-layout">
                 <div class="container">
@@ -24,7 +24,7 @@
                 <img src="./assets/images/services/Asset14.svg" alt="End To End Development">
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="service-layout2">
         <div class="container">
             <div class="row">
@@ -53,92 +53,43 @@
     </div>
     <div class="service-layout3">
         <div class="container">
-            <div class="d-flex">
-                <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="vertical">
-                  <li ngbNavItem="discussion">
-                    <a ngbNavLink><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-                        <g id="Group_6492" data-name="Group 6492" transform="translate(-9799 -639)">
-                          <rect id="Rectangle_4846" data-name="Rectangle 4846" width="40" height="40" transform="translate(9799 639)" fill="#fff" opacity="0"/>
-                          <g id="Group_6489" data-name="Group 6489" transform="translate(-42 47)">
-                            <rect id="Rectangle_4398" data-name="Rectangle 4398" width="32" height="24" transform="translate(9845 600)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"/>
-                            <circle id="Ellipse_1157" data-name="Ellipse 1157" cx="1.5" cy="1.5" r="1.5" transform="translate(9860 603)" fill="currentColor"/>
-                            <circle id="Ellipse_1158" data-name="Ellipse 1158" cx="1.5" cy="1.5" r="1.5" transform="translate(9865 603)" fill="currentColor"/>
-                            <circle id="Ellipse_1159" data-name="Ellipse 1159" cx="1.5" cy="1.5" r="1.5" transform="translate(9870 603)" fill="currentColor"/>
-                            <path id="Path_9507" data-name="Path 9507" d="M6921.532,11044.57l-3.881,3.617,3.881,3.23" transform="translate(2933 -10433.191)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-                            <path id="Path_9508" data-name="Path 9508" d="M6917.651,11044.57l3.881,3.617-3.881,3.23" transform="translate(2950 -10433.191)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-                            <line id="Line_128" data-name="Line 128" x1="4" y2="7.191" transform="translate(9859.5 611.309)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
-                          </g>
-                        </g>
-                      </svg>
-                      API Web Service</a>
-                    <ng-template ngbNavContent>
-                      <h2>API Web Service</h2>
-                      <p>We define the stubs in correlation with the Interface needs with scope for future enhancements with minimal changes. The API driven development allows us to integrate with multiple platforms and services in agile mode. We manage the code via Git repositories for a hassle free hand-over and deployment.</p>
-                    </ng-template>
-                  </li>
-                  <li ngbNavItem="discovery">
-                    <a ngbNavLink><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-                        <g id="Group_6494" data-name="Group 6494" transform="translate(-9897 -648)">
-                          <rect id="Rectangle_4852" data-name="Rectangle 4852" width="40" height="40" transform="translate(9897 648)" fill="#fff" opacity="0"/>
-                          <g id="Icon_feather-layers" data-name="Icon feather-layers" transform="translate(9902 653)">
-                            <path id="Path_9504" data-name="Path 9504" d="M15,3,3,9l12,6L27,9Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-                            <path id="Path_9505" data-name="Path 9505" d="M3,25.5l12,6,12-6" transform="translate(0 -4.5)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-                            <path id="Path_9506" data-name="Path 9506" d="M3,18l12,6,12-6" transform="translate(0 -3)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-                          </g>
-                        </g>
-                      </svg>
-                      Backend Framework</a>
-                    <ng-template ngbNavContent>
-                        <h2>Backend Framework</h2>
-                        <p>Quality is the key for any product success, with a well-defined quality process we delivery the product or application that are ready for go-live.</p>
-                        <p>With the core implementation done there is always scope for changes and customer exprience enhancements for which we work along with your team in Release/Patch Managment to suite the end-user demand.</p>
-                    </ng-template>
-                  </li>
 
-                  <li ngbNavItem="understanding">
-                    <a ngbNavLink><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-                        <g id="Group_6493" data-name="Group 6493" transform="translate(-9849 -643)">
-                          <rect id="Rectangle_4850" data-name="Rectangle 4850" width="40" height="40" transform="translate(9849 643)" fill="#fff" opacity="0"/>
-                          <g id="Group_6476" data-name="Group 6476" transform="translate(-179 -85)">
-                            <path id="Polygon_12" data-name="Polygon 12" d="M18,0l6,10.5L18,21H6L0,10.5,6,0Z" transform="translate(10036 738)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"/>
-                            <path id="Path_9623" data-name="Path 9623" d="M6529.5,11035.5l5.895,10.172h11.486" transform="translate(3513 -10297)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"/>
-                            <line id="Line_633" data-name="Line 633" x1="6" y2="10" transform="translate(10042.5 748.5)" fill="none" stroke="#currentColor" stroke-width="2"/>
-                          </g>
-                        </g>
-                      </svg>
-                      Understanding Systems</a>
-                    <ng-template ngbNavContent>
-                        <h2>Understanding Systems</h2>
-                       <p>We draw the System Roadmap based on the Design Strategy for a better Usability. In this approach we have a clear roadmap that encompasses multiple factors like Defined User Base, quantum & type of data. This set-up allows the well defined ecosystem to boost the performance, enhance scalability to alignment with the Product Vision, also get started with minimal fuss.</p>
-                    </ng-template>
-                  </li>
-
-                  <li ngbNavItem="scalability">
-                    <a ngbNavLink><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-                        <g id="Group_6504" data-name="Group 6504" transform="translate(-9811 -698)">
-                          <rect id="Rectangle_4849" data-name="Rectangle 4849" width="40" height="40" transform="translate(9811 698)" fill="#fff" opacity="0"/>
-                          <g id="Group_6474" data-name="Group 6474" transform="translate(9097.5 -903.525)">
-                            <path id="Path_9509" data-name="Path 9509" d="M6521,11198.524v-5.5h5.5" transform="translate(-5799.5 -9582.5)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-                            <path id="Path_9512" data-name="Path 9512" d="M6521,11193.026v5.5h5.5" transform="translate(-5799.5 -9565.501)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-                            <path id="Path_9510" data-name="Path 9510" d="M6526.5,11198.524v-5.5H6521" transform="translate(-5781.5 -9582.5)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-                            <path id="Path_9511" data-name="Path 9511" d="M6526.5,11193.026v5.5H6521" transform="translate(-5781.5 -9565.501)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-                            <path id="Path_9513" data-name="Path 9513" d="M6521.5,11193.525l5.5,5.5" transform="translate(-5800 -9583)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
-                            <path id="Path_9515" data-name="Path 9515" d="M6521.5,11198.418l4.893-4.893" transform="translate(-5800 -9566)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
-                            <path id="Path_9514" data-name="Path 9514" d="M6527,11193.525l-5.5,5.5" transform="translate(-5782.606 -9583)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
-                            <path id="Path_9516" data-name="Path 9516" d="M6526.393,11198.418l-4.893-4.893" transform="translate(-5782 -9566)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
-                          </g>
-                        </g>
-                      </svg>
-                      Scalability</a>
-                    <ng-template ngbNavContent>
-                        <h2>Scalability</h2>
-                        <p>We choose the right Tech Stack based on the detailed Analysis of User Behaviour and the Business needs in terms of, ease of use scalability interoperability with standardization adaptability with emerging trends integration with array of UI platforms (Responsive, Android, iOS & Wearables).</p>
-                    </ng-template>
-                  </li>
-                </ul>
-              
-                <div [ngbNavOutlet]="nav" class="ml-4 px-5"></div>
+          <h2>Our Process</h2>
+          <div class="row mb30">
+            <div class="col-md-5">
+              <h3>API Web Service</h3>
+            </div>
+            <div class="col-md-7">
+              <p>We define the stubs in correlation with the Interface needs with scope for future enhancements with minimal changes. The API driven development allows us to integrate with multiple platforms and services in agile mode. We manage the code via Git repositories for a hassle free hand-over and deployment.</p>
+                </div>
+          </div>
+          <div class="row mb30">
+              <div class="col-md-5">
+                <h3>Backend Framework</h3>
               </div>
+              <div class="col-md-7">
+                <p>Quality is the key for any product success, with a well-defined quality process we delivery the product or application that are ready for go-live.
+                  <br>
+                  With the core implementation done there is always scope for changes and customer exprience enhancements for which we work along with your team in Release/Patch Managment to suite the end-user demand.</p>
+              </div>
+          </div>
+          <div class="row mb30">
+            <div class="col-md-5">
+              <h3>Understanding Systems</h3>
+                </div>
+                <div class="col-md-7">
+                  <p>We draw the System Roadmap based on the Design Strategy for a better Usability. In this approach we have a clear roadmap that encompasses multiple factors like Defined User Base, quantum & type of data. This set-up allows the well defined ecosystem to boost the performance, enhance scalability to alignment with the Product Vision, also get started with minimal fuss.</p>
+                    </div>
+          </div>
+          <div class="row">
+            <div class="col-md-5">
+              <h3>Scalability</h3>
+            </div>
+            <div class="col-md-7">
+              <p>We choose the right Tech Stack based on the detailed Analysis of User Behaviour and the Business needs in terms of, ease of use scalability interoperability with standardization adaptability with emerging trends integration with array of UI platforms (Responsive, Android, iOS & Wearables).</p>
+            </div>
+          </div>
+
         </div>
     </div>
     <div class="service-layout3-responsive">
