--- a/src/app/modules/services/components/user-experience/user-experience.component.scss
+++ b/src/app/modules/services/components/user-experience/user-experience.component.scss
@@ -3,14 +3,13 @@
 @import '~bootstrap/scss/mixins';
 .services{
 .banner{
-    background-color: #e4e4e4;
-        padding-top: 100px;
-        margin-top: -200px;
-
+    background-color: #f7f5f0;
+    padding-top: 100px;
+    margin-top: -200px;
     h1{
         font-size: 56px;
         color: #3B3B3B;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
     }
     hr.line{
         border-bottom: 3px solid #000000;
@@ -22,7 +21,7 @@
     p{
         font-size: 36px;
         color: #707071;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
     }
     .banner-content{
         padding-top: 200px;
@@ -79,7 +78,7 @@
        padding: 250px 0px 300px;
        h3{
            font-size: 48px;
-           font-family: Baskerville;
+           font-family: "Muli", sans-serif;
        }
        @include media-breakpoint-down(lg){
         padding: 100px 0px;
@@ -87,7 +86,7 @@
        @include media-breakpoint-down(md){
         h3{
             font-size: 30px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
        }
     }
@@ -114,13 +113,13 @@
     h3{
         font-size: 48px;
         margin-bottom: 30px;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
     }
     p{
         font-size: 18px;
         font-weight: 200;
         margin-top: 40px;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
         line-height: 40px;
         color: #b5b5b5;
     }
@@ -133,7 +132,7 @@
             font-size: 20px;
             margin-left: 20px;
             font-weight: 200;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
     }
     @include media-breakpoint-down(lg){
@@ -202,8 +201,28 @@
 }
 .service-layout3{
     background-color: #FCFCFC;
-    padding: 150px 0px;
-    color: #282829;
+    padding: 100px 220px;
+    h3{
+        font-size: 36px;
+        font-weight: 100;
+        font-family: "Muli", sans-serif;
+    }
+    h2{
+        font-size: 50px;
+        margin-bottom: 80px;
+        text-align: center;
+        color: #3b3b3b;
+    }
+    p{
+        font-size: 15px;
+        font-weight: 300;
+        color: #707071;
+        margin-bottom: 30px;
+        line-height: 35px;
+        font-family: "Muli", sans-serif;
+        text-align: justify;
+    }
+
     li{
         list-style-type: none;
         font-size: 28px !important;
@@ -212,22 +231,13 @@
             margin-right: 10px;
         }
     }
-    h2{
-        font-size: 56px;
-        font-family: Baskerville;
-    }
-    p{
-        font-size: 16px;
-        line-height: 30px;
-        margin-top: 40px;
-        margin-left: 10px;
-        font-family: 'Muli', sans-serif;
-    }
     .li{
-        font-size: 16px;
-        margin-top: 6px;
-        margin-left: 10px;
-        font-family: 'Muli', sans-serif;
+        font-size: 15px;
+        font-weight: 300;
+        color: #707071;
+        line-height: 25px;
+        font-family: "Muli", sans-serif;
+        text-align: justify;
     }
     @include media-breakpoint-down(md){
         padding: 75px 0px;
@@ -301,7 +311,7 @@
     color: #C3343C;
     font-size: 36px;
     font-weight: 600;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     svg{
         margin-top: 8px !important;
     }
@@ -327,7 +337,7 @@
 }
 .nav-pills a{
     color: #282829;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     svg{
         margin-right: 10px;
     }
@@ -348,7 +358,7 @@
        background-color: #EBEBEB;
        h2{
            font-size: 57px;
-           font-family: Baskerville;
+           font-family: "Muli", sans-serif;
            color: #282829;
            margin-top: 120px;
            margin-bottom: 80px;
@@ -377,14 +387,14 @@
            }
            h3{
                font-size: 36px;
-               font-family: Baskerville;
+               font-family: "Muli", sans-serif;
                margin: 40px 130px 20px 40px;
                a{
                 color: #3B3B3B; 
                }
            }
            h4{
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             font-size: 20px;
                margin: 0 0 10px 40px;
            }
@@ -439,7 +449,7 @@ box-shadow: none !important;
     color: #0D0D0D;
     cursor: pointer;
     font-size: 20px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     padding: 10px 15px;
     &:hover{
         background-color: #000000;
