--- a/src/app/modules/work/components/event-management/event-management.component.scss
+++ b/src/app/modules/work/components/event-management/event-management.component.scss
@@ -7,7 +7,7 @@
 }
 h2{
     font-size: 56px;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 32px;
@@ -23,7 +23,7 @@ p{
 }
 h6{
     font-size: 36px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
@@ -80,7 +80,7 @@ h6{
         padding: 200px 0px;
         p{
             font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             line-height: 40px;
         }
         @include media-breakpoint-down(lg){
@@ -124,7 +124,7 @@ h6{
         padding: 200px 0px;
         p{
             font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             line-height: 50px;
         }
         @include media-breakpoint-down(lg){
@@ -149,11 +149,11 @@ h6{
             margin-bottom: 120px;
         }
         h6{
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
         p{
             font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             line-height: 40px;
         }
         @include media-breakpoint-down(md){
@@ -173,24 +173,24 @@ h6{
         h1{
             color: #FF6C6C;
             font-size: 116px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             margin-top: 100px;
         }
         h2{
             font-size: 56px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #FF6C6C;
             font-weight: 300;
         }
         h6{
             margin-bottom: 25px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             font-size: 32px;
         }
         p{
             //font-weight: 300;
             font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
         .needs{
             height: 500px;
@@ -233,10 +233,10 @@ h6{
         color: #3D3D3D;
         h6{
             line-height: 55px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
         p{
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             font-size: 18px;
             line-height: 40px;
         }
@@ -277,16 +277,16 @@ h6{
         h6{
             line-height: 55px;
             margin-top: 40px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             font-size: 36px;
         }
         h5{
             font-size: 20px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
         P{
              font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             line-height: 35px;
         }
         @include media-breakpoint-down(lg){
@@ -345,7 +345,7 @@ h6{
         padding-bottom: 40px;
         h2{
             font-size: 57px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #FCFCFC;
         }
         .button{
@@ -356,7 +356,7 @@ h6{
             color: #FCFCFC;
             font-size: 20px;
             border-radius: 0px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             padding: 10px 20px;
             cursor: pointer;
             &:hover{
@@ -390,7 +390,7 @@ h6{
            background-color: #EBEBEB;
            h2{
                font-size: 57px;
-               font-family: Baskerville;
+               font-family: "Muli", sans-serif;
                color: #282829;
                margin-top: 120px;
                margin-bottom: 80px;
@@ -419,14 +419,14 @@ h6{
                }
                h3{
                    font-size: 36px;
-                   font-family: Baskerville;
+                   font-family: "Muli", sans-serif;
                    margin: 40px 130px 20px 40px;
                    a{
                     color: #3B3B3B; 
                    }
                }
                h4{
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
                  font-size: 18px;
                    margin: 0 0 10px 40px;
                }
@@ -467,8 +467,8 @@ h6{
             &.active{
                 width: 11px;
                 height: 11px;
-                border: 8px solid #C3343C;
-                background-color: #C3343C !important;
+                border: 8px solid #000000;
+                background-color: #000000 !important;
             }
         }
     }
@@ -490,7 +490,7 @@ h6{
         color: #0D0D0D;
         cursor: pointer;
          font-size: 18px;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
         padding: 10px 15px;
         &:hover{
             background-color: #C3343C;
