--- a/src/app/modules/work/components/skill-development/skill-development.component.scss
+++ b/src/app/modules/work/components/skill-development/skill-development.component.scss
@@ -7,7 +7,7 @@
 }
 h2{
     font-size: 56px;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 32px;
@@ -16,7 +16,7 @@ h2{
 }
 p{
     font-size: 18px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
@@ -24,7 +24,7 @@ p{
 }
 h6{
     font-size: 24px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
@@ -124,7 +124,7 @@ h6{
         padding: 200px 0px;
         p{
             font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             line-height: 40px;
         }
         img{
@@ -179,11 +179,11 @@ h6{
         }
         h6{
             font-size: 36px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
         p{
             font-size: 18px;
-           font-family: 'Muli', sans-serif;
+           font-family: "Muli", sans-serif;
            line-height: 35px;
        }
        @include media-breakpoint-down(lg){
@@ -208,24 +208,24 @@ h6{
         h1{
             color: #222222;
             font-size: 116px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             margin-top: 100px;
         }
         h2{
             font-size: 56px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #222222;
             font-weight: 300;
         }
         h6{
             margin-bottom: 25px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             font-size: 36px;
         }
         p{
             //font-weight: 300;
              font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
         .needs{
             height: 500px;
@@ -268,11 +268,11 @@ h6{
         color: #3D3D3D;
         h6{
             line-height: 55px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             font-size: 36px;
         }
         p{
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
              font-size: 18px;
             line-height: 40px;
         }
@@ -297,16 +297,16 @@ h6{
         h6{
             line-height: 55px;
             margin-top: 40px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             font-size: 36px;
         }
         h5{
             font-size: 20px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
         P{
              font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             line-height: 35px;
         }
         @include media-breakpoint-down(lg){
@@ -366,7 +366,7 @@ h6{
         padding-bottom: 40px;
         h2{
             font-size: 57px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #FCFCFC;
         }
         .button{
@@ -377,7 +377,7 @@ h6{
             color: #FCFCFC;
              font-size: 18px;
             border-radius: 0px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             padding: 10px 20px;
             cursor: pointer;
             &:hover{
@@ -411,7 +411,7 @@ h6{
            background-color: #EBEBEB;
            h2{
             font-size: 57px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #282829;
             margin-top: 120px;
             margin-bottom: 80px;
@@ -422,7 +422,7 @@ h6{
             color: #0D0D0D;
             cursor: pointer;
             font-size: 20px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             padding: 10px 15px;
             &:hover{
                 background-color: #C3343C;
@@ -454,14 +454,14 @@ h6{
                }
                h3{
                 font-size: 36px;
-                font-family: Baskerville;
+                font-family: "Muli", sans-serif;
                 margin: 40px 130px 20px 40px;
                 a{
                     color: #3B3B3B; 
                    }
             }
             h4{
-             font-family: 'Muli', sans-serif;
+             font-family: "Muli", sans-serif;
              font-size: 20px;
                 margin: 0 0 10px 40px;
             }
@@ -502,8 +502,8 @@ h6{
             &.active{
                 width: 11px;
                 height: 11px;
-                border: 8px solid #C3343C;
-                background-color: #C3343C !important;
+                border: 8px solid #000000;
+                background-color: #000000 !important;
             }
         }
     }
