--- a/src/app/components/engagement-models/engagement-models.component.scss
+++ b/src/app/components/engagement-models/engagement-models.component.scss
@@ -12,12 +12,12 @@
         padding-top: 140px;
         height: 700px;
         padding: 250px 0px;
-        background-color: #e4e4e4;
+        background-color: #f7f5f0;
         .engagement-layout{
         h1{
             font-size: 76px;
             color: #3B3B3B;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             span{
                 color: #000000;
             }
@@ -30,7 +30,7 @@
             font-size: 36px;
             padding-top: 25px;
             color: #3B3B3B;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
              span{
                 color: #000000;
                 //border-bottom: 2px solid #FFF;
@@ -169,14 +169,14 @@
         p{
             font-size: 18px;
             color: #000000;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
         h2{
             font-size: 48px;
             font-weight: 500;
             margin-bottom: 40px;
             color: #000000;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
     }
     .design-right{
@@ -189,7 +189,7 @@
           p{
             font-size: 18px;
             color: #000000;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
     }
     .mt-2, .my-2 {
