--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -42,7 +42,7 @@ button{
         margin-bottom: 10px;
         padding-top: 27px;
         a{
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             font-size: 16px;
             font-weight: 100;
             color: #fbe1df;
