--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -8,25 +8,23 @@
 .services{
     .layout{
         background-color: #f7f5f0;
+        background-image: url('/assets/images/serviceill.svg');
+        background-repeat: no-repeat;
+        background-position: right;
         padding-top: 140px;
         height: 700px;
         padding: 200px 0px;   
-            
-        svg{
-            margin-left: -700px;
-            margin-top: -150px;
-        }
         h1{
             font-size: 60px;
             font-weight: 400;
             color: #3b3b3b;
             padding-top: 50px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             span{
                 font-size: 60px;
                 font-weight: 400;
                 color: #000000;
-                font-family: Baskerville;
+                font-family: "Muli", sans-serif;
             }       
             #nextline::before{
                 content: "\a";
@@ -37,7 +35,7 @@
             font-size: 36px;
             font-weight: 400;
             color: #3b3b3b;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             a{
                 color: #3B3B3B;
                 text-decoration: underline;
@@ -84,12 +82,12 @@
             font-size: 28px;
             font-weight: 300;
             cursor: pointer;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             h2{
                 font-size: 56px;
                 font-weight: 500;
                 margin-bottom: 30px;
-                font-family: Baskerville;
+                font-family: "Muli", sans-serif;
             }
         }
         p{
@@ -97,7 +95,7 @@
             font-weight: 300;
             margin-bottom: 60px;
             line-height: 40px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
         .btn{
             font-size: 20px;
@@ -105,7 +103,7 @@
             background-color: #FFF;
             color: #5277BA;
             border-radius: 0;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             img{
                 padding-left: 15px;
             }
@@ -135,9 +133,6 @@
     }
 
     @include media-breakpoint-down(sm) {
-        // .layout{
-        //     // background-image: url('/assets/images/Mobile Service.png');
-        // }
         .types-responsive{
             margin-top: 0px;
             display: block;
@@ -182,7 +177,7 @@
         h2{
             font-size: 20px;
             color: #ffffff;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
         .design-left{
             padding: 40px 20px;
@@ -190,7 +185,7 @@
                     font-size: 18px;
                     color: #ffffff;
                     padding-top: 10px;
-                    font-family: 'Muli', sans-serif;
+                    font-family: "Muli", sans-serif;
                 }
                 .li{
                     font-size: 20px;
@@ -204,16 +199,13 @@
     }
 
     .cater{
-        // // .container{
-        // //     width: 1150px;
-        // }
-        padding: 40px;
+        padding: 40px 220px;
         background-color: #f7f5f0;
         h1{
             text-align: center;
             margin-bottom: 20px;
             padding: 20px;
-            font-family:'baskerville';
+            font-family:''Muli', sans-serif';
             font-size: 40px;
             color:#000000;
         }
@@ -221,13 +213,13 @@
             font-size: 28px;
             font-weight: 300;
             cursor: pointer;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
         h2{
             font-size: 40px;
-            font-weight: 500;
+            font-weight: 100;
             margin-bottom: 30px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #3B3B3B;
         }
         p{
@@ -236,7 +228,7 @@
             color: #707071;
             margin-bottom:30px;
             line-height: 35px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             text-align: justify;
         }
         
@@ -312,7 +304,7 @@
         h2{
             font-size: 20px;
             color: #282829;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
         .design-left{
             padding: 40px 20px;
@@ -320,7 +312,7 @@
                     font-size: 18px;
                     color: #282829;
                     padding-top: 10px;
-                    font-family: 'Muli', sans-serif;
+                    font-family: "Muli", sans-serif;
                 }
                 .li{
                     font-size: 20px;
@@ -333,15 +325,12 @@
         }
     }
     .services-list{
-        // .container{
-        //     width: 1150px;
-        // }
-    
+        padding: 100px 0px;
         h1{
             text-align: center;
             margin-bottom: 20px;
             padding: 20px;
-            font-family:'baskerville';
+            font-family:''Muli', sans-serif';
             font-size:50px;
         }
         .service-offer {
@@ -357,14 +346,7 @@
             
             .service-card{
                 color: #707071;
-                // height: 400px;
-                text-align:center;
-                // justify-content: space-between;
-                // width: 50px;
-                // padding-top:50px;
                 margin-bottom: 20px;
-                // max-width: 1100px;
-                // min-width:400px;
                 h4{
                     margin-top:20px;
                     margin-bottom:25px;
@@ -386,52 +368,30 @@
                 width: 20%;
             }
         }
-        // .service-card2{
-        //     color: #707071;
-        //     // height: 400px;
-        //     text-align: left;
-        //     // justify-content: space-between;
-        //     // width: 50px;
-        //     padding-top:50px;
-        //     margin-bottom: 15px;
-        //     // max-width: 1100px;
-        //     // min-width:400px;
-        //     // border-right: solid #f0efed;
-        //     h4{
-        //         margin-bottom:25px;
-        //         color: #3B3B3B;
-        //         font-size: 22px;
-
-        //     }
-        // .swipe-button{          
-        //     color:#3B3B3B;
-        //     text-align: center;
-        // }
-        
-        // }
         .col-md-4:hover{
-           
             .swipe-button{
                 
                 text-decoration: none;
             }
-            
-            .swipe-button:hover{
-                color:#C3343C !important;
+            .swipe-button::after {
+                content: '';
+                display: block;
+                width: 0;
+                height: 2px;
+                background: #000;
+                transition: width .5s;
             }
             
-
+            .swipe-button:hover::after {
+                color: #000000 !important;
+                width: 80px;
+            }
         }
         .serv-button{
             color: #000000;
         }
-       
-        
     }
-    
     }
-
-
 .nav-pills{
     width: 200%;
 }
@@ -501,4 +461,8 @@
 .lets-talk{
     height: 80px;
     margin-top: 42px;
+}
+.line{
+    border-bottom: 1px solid #bfbfbf;
+    margin-bottom: 45px;
 }
