--- a/src/app/components/uxmint-terms/uxmint-terms.component.scss
+++ b/src/app/components/uxmint-terms/uxmint-terms.component.scss
@@ -6,14 +6,14 @@
     h3{
         font-size: 36px;
         color: #3B3B3B;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
         margin-bottom: 25px;
     }
     p{
         font-size: 18px;
         color: #707071;
         line-height: 35px;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
     }
     .page-description{
         margin-bottom: 50px;
