--- a/src/app/modules/career/components/job-apply/job-apply.component.scss
+++ b/src/app/modules/career/components/job-apply/job-apply.component.scss
@@ -15,7 +15,7 @@
         h1{
             font-size: 56px;
             color: #3B3B3B;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             span{
                 color: #C3343C;
             }
@@ -24,7 +24,7 @@
             font-size: 26px;
             color: #3B3B3B;
             padding-top: 25px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             span a{
                 color: #C3343C;
                 text-decoration: underline;
@@ -60,7 +60,7 @@
                 color: #0D0D0D;
                 cursor: pointer;
                 font-size: 20px;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
                 padding: 8px 25px;
                 &:hover{
                     background-color: #C3343C;
@@ -77,14 +77,14 @@
             margin: 40px 0;
             h2{
                 font-size: 36px;
-                font-family: Baskerville;
+                font-family: "Muli", sans-serif;
                 color: #C3343C;
                 padding-bottom: 40px;
             }
             h6{
                 font-size: 18px;
                 padding-top: 20px;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
                 color: #464646;
                 padding-left: 20px;
             }
@@ -93,13 +93,13 @@
                     font-size: 18px;
                     font-weight: 400;
                     color: #464646;
-                    font-family: 'Muli', sans-serif;
+                    font-family: "Muli", sans-serif;
                 }
             }
             h5{
                 font-size: 18px;
                 padding-top: 5px;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
                 color: #464646;
             }
             mat-form-field{
@@ -122,7 +122,7 @@
                     color: #0D0D0D;
                     cursor: pointer;
                     font-size: 20px;
-                    font-family: 'Muli', sans-serif;
+                    font-family: "Muli", sans-serif;
                     padding: 8px 25px;
                     &:hover{
                         background-color: #C3343C;
