--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
@@ -11,7 +11,7 @@
         h1{
             font-size: 56px;
             color: #3B3B3B;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             span{
                 color: #C3343C;
             }
@@ -20,7 +20,7 @@
             font-size: 26px;
             color: #3B3B3B;
             padding-top: 25px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             span a{
                 color: #C3343C;
                 text-decoration: underline;
@@ -53,18 +53,18 @@
                 font-size: 36px;
                 font-weight: 500;
                 color: #3B3B3B;
-                font-family: Baskerville;
+                font-family: "Muli", sans-serif;
                 padding-bottom: 30px;
             }
             h6{
                 font-size: 20px;
                 color: #3B3B3B;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
             }
             h5{
                 font-size: 20px;
                 color: #707071;
-                font-family: 'Muli', sans-serif;  
+                font-family: "Muli", sans-serif;  
                 padding-bottom: 20px;
             }
             .button{
@@ -76,7 +76,7 @@
                 border-radius: 0;
                 cursor: pointer;
                 font-size: 20px;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
                 padding: 8px 25px;
                 //color: #0D0D0D;
                 a:hover{
@@ -98,14 +98,14 @@
                     font-size: 24px;
                     color: #8B8B8F;
                     margin-top: -45px;
-                    font-family: Baskerville;
+                    font-family: "Muli", sans-serif;
                 }
                 p{
                     font-size: 16px;
                     color: #707071;
                     //padding-top: 35px;
                     line-height: 45px;
-                    font-family: 'Muli', sans-serif;
+                    font-family: "Muli", sans-serif;
                 }
                 .button{
                     margin-top: 40px;
@@ -116,7 +116,7 @@
                     color: #0D0D0D;
                     cursor: pointer;
                     font-size: 20px;
-                    font-family: 'Muli', sans-serif;
+                    font-family: "Muli", sans-serif;
                     padding: 8px 25px;
                     &:hover{
                         background-color: #C3343C;
