--- a/src/app/modules/services/components/ui-development/ui-development.component.scss
+++ b/src/app/modules/services/components/ui-development/ui-development.component.scss
@@ -5,14 +5,13 @@
     padding-top: 100px;
     margin-top: -200px;
 .banner{
-    // background-image: url('/assets/images/bg.png');
     height: 580px;
     padding: 200px 0px;
-    background-color: #e4e4e4;
+    background-color: #f7f5f0;
     h1{
         font-size: 56px;
         color: #3B3B3B;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
     }
     hr.line{
         border-bottom: 3px solid black;
@@ -24,7 +23,7 @@
     p{
         font-size: 18px;
         color: #707071;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
     }
     @include media-breakpoint-down(lg){
         .row{
@@ -72,7 +71,7 @@
        padding: 250px 0px 190px;
        h3{
            font-size: 48px;
-           font-family: Baskerville;
+           font-family: "Muli", sans-serif;
        }
        @include media-breakpoint-down(lg){
         padding: 100px 0px;
@@ -109,13 +108,13 @@
     h3{
         font-size: 36px;
         margin-bottom: 30px;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
     }
     p{
         font-size: 18px;
         font-weight: 200;
         margin-top: 40px;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
     }
     .list{
         padding: 30px;
@@ -123,7 +122,7 @@
             font-size: 20px;
             margin-left: 5px;
             font-weight: 200;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
     }
     @include media-breakpoint-down(lg){
@@ -194,9 +193,6 @@
     @include media-breakpoint-down(sm){
         display: none;
     }
-    background-color: #FCFCFC;
-    padding: 150px 0px;
-    color: #282829;
     li{
         list-style-type: none;
         font-size: 28px;
@@ -206,7 +202,7 @@
         }
     }
     .list{
-        padding: 30px;
+        padding: 10px 20px;
         img{
             width: 50px;
         }
@@ -215,32 +211,45 @@
             line-height: 32px;
             font-weight: 300;
             padding-top: 10px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
         .lists{
             padding-left: 10px;
         }
     }
+    background-color: #FCFCFC;
+    padding: 100px 220px;
+    h3{
+        font-size: 36px;
+        font-weight: 100;
+        font-family: "Muli", sans-serif;
+    }
     h2{
-        font-size: 56px;
-        font-family: Baskerville;
+        font-size: 50px;
+        margin-bottom: 80px;
+        text-align: center;
+        color: #3b3b3b;
     }
     p{
-        font-size: 16px;
-        line-height: 30px;
-        margin-top: 40px;
-        margin-left: 10px;
-        font-family: 'Muli', sans-serif;
+        font-size: 15px;
+        font-weight: 300;
+        color: #707071;
+        margin-bottom: 30px;
+        line-height: 35px;
+        font-family: "Muli", sans-serif;
+        text-align: justify;
     }
     .nav-pills{
         width: 150%;
         margin-top: -80px;
     }
     .li{
-        font-size: 16px;
-        font-family: 'Muli', sans-serif;
-        margin-top: 6px;
-        margin-left: 10px;
+        font-size: 15px;
+        font-weight: 300;
+        color: #707071;
+        line-height: 25px;
+        font-family: "Muli", sans-serif;
+        text-align: justify;
     }
     .flex-column{
         padding: 100px 0px;
@@ -281,7 +290,7 @@
                 line-height: 32px;
                 font-weight: 300;
                 padding-top: 10px;
-                font-family: 'Muli', sans-serif;
+                font-family: "Muli", sans-serif;
             }
         }
         .card{
@@ -337,7 +346,7 @@
     color: #C3343C;
     font-size: 36px;
     font-weight: 600;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     svg{
         margin-top: 8px !important;
     }
@@ -364,7 +373,7 @@
 }
 .nav-pills a{
     color: #282829;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     svg{
         margin-right: 10px;
     }
@@ -385,7 +394,7 @@
        background-color: #EBEBEB;
        h2{
            font-size: 57px;
-           font-family: Baskerville;
+           font-family: "Muli", sans-serif;
            color: #282829;
            margin-top: 120px;
            margin-bottom: 80px;
@@ -414,14 +423,14 @@
            }
            h3{
                font-size: 36px;
-               font-family: Baskerville;
+               font-family: "Muli", sans-serif;
                margin: 40px 130px 20px 40px;
                a{
                 color: #3B3B3B; 
                }
            }
            h4{
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             font-size: 20px;
                margin: 0 0 10px 40px;
            }
@@ -460,8 +469,8 @@ li{
         &.active{
             width: 11px;
             height: 11px;
-            border: 8px solid #C3343C;
-            background-color: #C3343C !important;
+            border: 8px solid #000000;
+            background-color: #000 !important;
         }
     }
 }
@@ -476,7 +485,7 @@ box-shadow: none !important;
     color: #0D0D0D;
     cursor: pointer;
     font-size: 20px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     padding: 10px 15px;
     &:hover{
         background-color: #C3343C;
