--- a/src/app/modules/services/components/usability-testing/usability-testing.component.scss
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.scss
@@ -6,11 +6,11 @@
     margin-top: -200px;
 .banner{
     height: 580px;
-    background-color: #e4e4e4;
+    background-color: #f7f5f0;
     h1{
         font-size: 56px;
         color: #3B3B3B;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
     }
     hr.line{
         border-bottom: 3px solid black;
@@ -22,7 +22,7 @@
     p{
         font-size: 18px;
         color: #707071;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
     }
     .banner-content{
         padding-top: 200px;
@@ -87,7 +87,7 @@
     }
     h2{
         font-size: 36px;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
         padding: 85px 0px;
     }
     .card{
@@ -100,7 +100,7 @@
     }
     }
     .text{
-        padding: 20px 50px;
+        padding: 10px 50px;
         }
     }
     @include media-breakpoint-down(lg) {
@@ -168,12 +168,12 @@
         margin-right: 0px !important;
     }
     .left-layout{
-       background-color: #C3343C;
+       background-color: #000000;
        color: #FFFFFF;
        padding: 250px 0px 200px;
        h3{
            font-size: 48px;
-           font-family: Baskerville;
+           font-family: "Muli", sans-serif;
        }
        @include media-breakpoint-down(lg){
         padding: 100px 0px;
@@ -181,12 +181,12 @@
        @include media-breakpoint-down(md){
         h3{
             font-size: 30px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
        }
     }
     .right-layout{
-        background-color: #C3343C;
+        background-color: #000000;
         @include media-breakpoint-down(sm){
             display: none;
         }
@@ -208,13 +208,13 @@
     h3{
         font-size: 36px;
         margin-bottom: 30px;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
     }
     p{
         font-size: 18px;
         font-weight: 200;
         margin-top: 40px;
-        font-family: 'Muli', sans-serif;
+        font-family: "Muli", sans-serif;
         line-height: 40px;
     }
     .list{
@@ -223,7 +223,7 @@
             font-size: 20px;
             margin-left: 5px;
             font-weight: 200;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
     }
 
@@ -305,14 +305,14 @@
         }
     }
     h2{
-        font-size: 56px;
-        font-family: Baskerville;
+        font-size: 30px;
+        font-family: "Muli", sans-serif;
     }
     p{
         font-size: 16px;
         line-height: 30px;
-        margin-top: 40px;
-        font-family: 'Muli', sans-serif;
+        margin: 40px 0px;
+        font-family: "Muli", sans-serif;
     }
     .li{
         font-size: 16px;
@@ -344,7 +344,7 @@
             background-color: #FFFFFF !important;
         }
         ::ng-deep .btn-link:hover {
-            color: #C3343C;
+            color: #000000;
             font-size: 20px;
         }
         ::ng-deep .btn-link {
@@ -356,7 +356,7 @@
             width: 100%;
         }
         ::ng-deep .btn-link.active {
-            color: #C3343C;
+            color: #000000;
         }
         ::ng-deep .dis_flex{
             display:flex;
@@ -387,10 +387,10 @@
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
     background-color: #FFFFFF;
-    color: #C3343C;
+    color: #000000;
     font-size: 36px;
     font-weight: 600;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     svg{
         margin-top: 8px !important;
     }
@@ -414,7 +414,7 @@
 
 .nav-pills a{
     color: #282829;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     svg{
         margin-right: 10px;
     }
@@ -430,7 +430,10 @@
         padding-top: 60px;
         margin-bottom: 20px;
         line-height: 60px;
-        font-family: Baskerville;
+        font-family: "Muli", sans-serif;
+    }
+    .only-mobile{
+        display: none;
     }
     .layout{
     .flex{
@@ -446,7 +449,7 @@
           margin-left: 8%;
            p{
                font-size: 16px;
-               font-family: 'Muli', sans-serif;
+               font-family: "Muli", sans-serif;
            }
        }
     }
@@ -486,6 +489,9 @@
     }
     @include media-breakpoint-down(sm) {
         padding: 40px 0;
+        .only-mobile{
+            display: block;
+        }
         .layout{
             display: none;
         }
@@ -513,19 +519,29 @@
 }
 .service-layout4{
     background-color: #FCFCFC;
-    padding: 200px 0px;
+    padding: 100px 220px;
     h3{
         font-size: 36px;
-        font-family: Baskerville;
+        font-weight: 100;
+        font-family: "Muli", sans-serif;
+    }
+    h2{
+        font-size: 50px;
+        margin-bottom: 80px;
+        text-align: center;
+        color: #3b3b3b;
     }
     p{
-        font-size: 18px;
-        line-height: 40px;
-        font-family: 'Muli', sans-serif;
-        margin-left: 35px;
+        font-size: 15px;
+        font-weight: 300;
+        color: #707071;
+        margin-bottom: 30px;
+        line-height: 35px;
+        font-family: "Muli", sans-serif;
+        text-align: justify;
     }
     @include media-breakpoint-down(lg){
-        padding: 200px 0px;
+        padding: 150px 0px;
     }
     @include media-breakpoint-down(md){
         padding: 150px 0px;
@@ -535,12 +551,7 @@
     }
 }
 ::ng-deep .tab-content > .active{
-    font-family: 'Muli', sans-serif;
-}
-.services-scroll{
-    height: 400px;
-    overflow: auto;
-    padding: 50px 0px;
+    font-family: "Muli", sans-serif;
 }
 // Carousel
 .other-case-studies{
@@ -557,7 +568,7 @@
        background-color: #EBEBEB;
        h2{
            font-size: 57px;
-           font-family: Baskerville;
+           font-family: "Muli", sans-serif;
            color: #282829;
            margin-top: 120px;
            margin-bottom: 80px;
@@ -586,14 +597,14 @@
            }
            h3{
                font-size: 36px;
-               font-family: Baskerville;
+               font-family: "Muli", sans-serif;
                margin: 40px 130px 20px 40px;
                a{
                 color: #3B3B3B; 
                }
            }
            h4{
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             font-size: 20px;
                margin: 0 0 10px 40px;
            }
@@ -631,8 +642,8 @@ li{
         &.active{
             width: 11px;
             height: 11px;
-            border: 8px solid #C3343C;
-            background-color: #C3343C !important;
+            border: 8px solid #000000;
+            background-color: #000000 !important;
         }
     }
 }
@@ -647,10 +658,10 @@ box-shadow: none !important;
     color: #0D0D0D;
     cursor: pointer;
     font-size: 20px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     padding: 10px 15px;
     &:hover{
-        background-color: #C3343C;
+        background-color: #000000;
         color: #FFFFFF;
         border: 2px solid #E2E2E2;
     }
