--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
@@ -7,7 +7,7 @@
 }
 h2{
     font-size: 56px;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 32px;
@@ -16,7 +16,7 @@ h2{
 }
 p{
     font-size: 18px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
@@ -24,7 +24,7 @@ p{
 }
 h6{
     font-size: 24px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
@@ -120,12 +120,12 @@ h6{
             margin-bottom: 120px;
         }
         h6{
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             font-size: 36px;
         }
         p{
              font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             line-height: 35px;
         }
         @include media-breakpoint-down(lg){
@@ -160,12 +160,12 @@ h6{
         }
         h2{
             font-size: 57px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
         p{
             font-size: 18px;
             line-height: 40px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             padding-left: 85px;
             padding-top: 25px;
         }
@@ -211,7 +211,7 @@ h6{
         padding-bottom: 40px;
         h2{
             font-size: 57px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #FCFCFC;
         }
         .button{
@@ -222,7 +222,7 @@ h6{
             color: #FCFCFC;
              font-size: 18px;
             border-radius: 0px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             padding: 10px 20px;
             cursor: pointer;
             &:hover{
@@ -256,7 +256,7 @@ h6{
            background-color: #EBEBEB;
            h2{
             font-size: 57px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #282829;
             margin-top: 120px;
             margin-bottom: 80px;
@@ -267,7 +267,7 @@ h6{
             color: #0D0D0D;
             cursor: pointer;
              font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             &:hover{
                 background-color: #C3343C;
                 color: #FFFFFF;
@@ -298,14 +298,14 @@ h6{
                }
                h3{
                 font-size: 36px;
-                font-family: Baskerville;
+                font-family: "Muli", sans-serif;
                 margin: 40px 130px 20px 40px;
                 a{
                     color: #3B3B3B; 
                    }
             }
             h4{
-             font-family: 'Muli', sans-serif;
+             font-family: "Muli", sans-serif;
               font-size: 18px;
                 margin: 0 0 10px 40px;
             }
@@ -346,8 +346,8 @@ h6{
             &.active{
                 width: 11px;
                 height: 11px;
-                border: 8px solid #C3343C;
-                background-color: #C3343C !important;
+                border: 8px solid #000000;
+                background-color: #000000 !important;
             }
         }
     }
