--- a/src/app/modules/work/components/uxahead/uxahead.component.scss
+++ b/src/app/modules/work/components/uxahead/uxahead.component.scss
@@ -7,7 +7,7 @@
 }
 h2{
     font-size: 56px;
-    font-family: Baskerville;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 32px;
@@ -16,7 +16,7 @@ h2{
 }
 p{
     font-size: 18px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
@@ -24,7 +24,7 @@ p{
 }
 h6{
     font-size: 24px;
-    font-family: 'Muli', sans-serif;
+    font-family: "Muli", sans-serif;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
@@ -109,7 +109,7 @@ h6{
         }
         h6{
             font-size: 36px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             padding-bottom: 30px;
             @include media-breakpoint-down(lg) {
                     padding-top: 50px;
@@ -132,7 +132,7 @@ h6{
         padding: 200px 0px;
         p{
             font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             line-height: 50px;
         }
         @include media-breakpoint-down(lg){
@@ -172,11 +172,11 @@ h6{
             margin-bottom: 120px;
         }
         h6{
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
         p{
             font-size: 18px;
-           font-family: 'Muli', sans-serif;
+           font-family: "Muli", sans-serif;
            line-height: 35px;
        }
        @include media-breakpoint-down(lg){
@@ -200,10 +200,10 @@ h6{
         color: #3D3D3D;
         h6{
             line-height: 55px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
         }
         p{
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             font-size: 18px;
             line-height: 40px;
         }
@@ -228,16 +228,16 @@ h6{
         h6{
             line-height: 55px;
             margin-top: 40px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             font-size: 36px;
         }
         h5{
             font-size: 20px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
         }
         P{
              font-size: 18px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             line-height: 35px;
         }
         img{
@@ -304,7 +304,7 @@ h6{
         padding-bottom: 40px;
         h2{
             font-size: 57px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #FCFCFC;
         }
         .button{
@@ -315,7 +315,7 @@ h6{
             color: #FCFCFC;
              font-size: 18px;
             border-radius: 0px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             padding: 10px 20px;
             cursor: pointer;
             &:hover{
@@ -349,7 +349,7 @@ h6{
            background-color: #EBEBEB;
            h2{
             font-size: 57px;
-            font-family: Baskerville;
+            font-family: "Muli", sans-serif;
             color: #282829;
             margin-top: 120px;
             margin-bottom: 80px;
@@ -360,7 +360,7 @@ h6{
             color: #0D0D0D;
             cursor: pointer;
             font-size: 20px;
-            font-family: 'Muli', sans-serif;
+            font-family: "Muli", sans-serif;
             padding: 10px 15px;
             &:hover{
                 background-color: #C3343C;
@@ -392,14 +392,14 @@ h6{
                }
                h3{
                 font-size: 36px;
-                font-family: Baskerville;
+                font-family: "Muli", sans-serif;
                 margin: 40px 130px 20px 40px;
                 a{
                     color: #3B3B3B; 
                    }
             }
             h4{
-             font-family: 'Muli', sans-serif;
+             font-family: "Muli", sans-serif;
              font-size: 20px;
                 margin: 0 0 10px 40px;
             }
@@ -440,8 +440,8 @@ h6{
             &.active{
                 width: 11px;
                 height: 11px;
-                border: 8px solid #C3343C;
-                background-color: #C3343C !important;
+                border: 8px solid #000000;
+                background-color: #000000 !important;
             }
         }
     }
